--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-20 01:39:54
+lastsearch = 2024-07-20 04:48:05
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -227,9 +227,9 @@ title = Chiều nay, TP HCM công bố điểm chuẩn lớp 10
 url = https://nld.com.vn/podcast/chieu-nay-tp-hcm-cong-bo-diem-chuan-lop-10-196240703113631368.htm
 
 [www.youtube.com]
-match = -231.2%%
-title = Vượt qua nỗi sợ lạc nội mạc tử cung Chọn đối mặt, chọn lạc ...
-url = https://www.youtube.com/watch?v=Rj_I4Cb0gKo
+match = -218.8%%
+title = Tổng Bí thư Nguyễn Phú Trọng - Nhà lãnh đạo khiêm nhường ...
+url = https://www.youtube.com/watch?v=vxaueSC4N60
 
 [www.pharmacity.vn]
 match = -187.5%%
@@ -290,4 +290,9 @@ url = https://www.mass.gov/doc/masshealth-adult-disability-supplement-vietnamese
 match = -81.2%%
 title = Nữ sinh đạt 3 điểm 10 thi tốt nghiệp
 url = https://viettimes.vn/uoc-mo-gian-di-cua-nu-sinh-vung-cao-dat-3-diem-10-thi-tot-nghiep-post176612.html
+
+[www.facebook.com]
+match = 18.8%%
+title = Share on Facebook
+url = https://www.facebook.com/share
 
