--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-20 03:21:35
+lastsearch = 2024-07-20 04:44:32
 
 [www.bible.com]
-match = 23.1%%
-title = sawltak 20:22
-url = https://www.bible.com/bible/368/ACT.20.22.TDB
+match = -94.1%%
+title = ISAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/ISA.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
