--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-19 23:42:24
+lastsearch = 2024-07-20 05:13:36
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
 url = https://thegioichieutruc.com/
 
 [www.facebook.com]
-match = 28.6%%
-title = Chiếu Hương Trúc | Lang Son
-url = https://www.facebook.com/chieuhuongtrucls/?locale=vi_VN
+match = 50.0%%
+title = CHIẾU TRÚC | Hanoi
+url = https://www.facebook.com/chieutrucviet/?locale=vi_VN
 
 [chieutruccaobang.com.vn]
 match = 57.9%%
