--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-20 03:35:53
+lastsearch = 2024-07-20 05:14:20
 
 [demtot.com]
 match = 4.8%%
@@ -22,9 +22,9 @@ title = Đệm lò xo Techwood 180x200x25cm giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
 
 [demxanh.com]
-match = -57.1%%
-title = Đệm lò xo 1m5x1m9 (150x190cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m5x1m9-150x190cm-gia-bao-nhieu.html
+match = -95.2%%
+title = Nệm lò xo Tuấn Anh có tốt không? Chọn loại đệm nào phù ...
+url = https://demxanh.com/nem-lo-xo-tuan-anh-co-tot-khong-chon-loai-dem-nao-phu-hop.html
 
 [maybedding.vn]
 match = 33.3%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -119.0%%
-title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
-url = https://lombom.com/dem-lo-xo/
+match = -133.3%%
+title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
+url = https://lombom.com/dem-nem/page/2/
 
 [www.linkedin.com]
 match = 4.8%%
