--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-20 08:04:22
+lastsearch = 2024-07-20 09:07:13
 
 [tiki.vn]
 match = -122.2%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -183.3%%
-title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
+match = -188.9%%
+title = Everon ESM-21013 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esm21013.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -27,9 +27,9 @@ title = Bộ Drap Cotton Satin LS1512-N07
 url = http://lavendervn.com/bo-drap-cotton-satin-ls1512-n07
 
 [choixe.vn]
-match = -138.9%%
-title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
-url = https://choixe.vn/collections/giuong-160x200
+match = -100.0%%
+title = Chổi Xể – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
+url = https://choixe.vn/
 
 [nemkimtrang.com]
 match = -144.4%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu ghi nhạt
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A114 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a114
+match = -61.1%%
+title = Bộ ga phủ Melody M214 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-melody-m214
 
 [aeoneshop.com]
 match = -105.6%%
@@ -82,9 +82,9 @@ title = 160x200
 url = https://www.mym.com.vn/kichthuoc/160x200/page/3
 
 [jysk.vn]
-match = -116.7%%
-title = Mattress 160x200 GOLD F40 DREAMZONE - JYSK.vn
-url = https://jysk.vn/en-US/mattress-180x200-gold-f40-dreamzone-1
+match = -94.4%%
+title = Duvet cover set BIANA Sand DBL - JYSK.vn
+url = https://jysk.vn/en-US/duvet-cover-set-biana-sand-dbl
 
 [edena.vn]
 match = -66.7%%
