--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-20 05:38:02
+lastsearch = 2024-07-20 09:05:46
 
 [www.instagram.com]
-match = -173.3%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+match = -6.7%%
+title = Hoi Chan (@hoichandraws)
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [thewoksoflife.com]
@@ -47,9 +47,9 @@ title = CHAN Hoi-man
 url = https://www.soc.cuhk.edu.hk/profile/chan-hoi-man/
 
 [hk.linkedin.com]
-match = -26.7%%
-title = Chan Hoi Yan - HKSAR government
-url = https://hk.linkedin.com/in/chan-hoi-yan-83322114b
+match = -186.7%%
+title = Chor-Hoi Chan - Harbin Institute of Technology, Shenzhen
+url = https://hk.linkedin.com/in/chor-hoi-chan-69a46b104
 
 [www.polyu.edu.hk]
 match = -160.0%%
