--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-20 05:33:31
+lastsearch = 2024-07-20 09:02:35
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = List of cities in Vietnam
 url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
-match = -65.2%%
-title = National Geographic Collegiate Atlas of the World
-url = https://books.google.com/books?id=gMaha-3d6voC&pg=PA367&lpg=PA367&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=E7Ojzpw47R&sig=ACfU3U2trr8Y8FBH26KvFyHmwNbiqxADUg&hl=en&sa=X&ved=2ahUKEwiwjrjmk7OHAxUgBUQIHQ_HAFcQ6AF6BAglEAM
+match = -43.5%%
+title = Vietnam - Page 187 - Google Books Result
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqWc6V0M&sig=ACfU3U2fyae3i7jZVt8R8fSEOfTFsM-j2w&hl=en&sa=X&ved=2ahUKEwiI2MGlw7SHAxUwFlkFHVTnCTgQ6AF6BAglEAM
 
 [www.travelweekly.com]
 match = -87.0%%
