--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-19 21:36:52
+lastsearch = 2024-07-20 09:05:13
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [kallos.co]
 match = -105.3%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -100.0%%
-title = Đảng Dân chủ Mỹ hoãn quá trình đề cử ông Biden
-url = https://trithucvn.co/the-gioi/dang-dan-chu-my-hoan-qua-trinh-de-cu-ong-biden.html
+match = -168.4%%
+title = Cảnh sát nổ súng, một người chết gần địa điểm diễn ra đại ...
+url = https://trithucvn.co/the-gioi/canh-sat-no-sung-mot-nguoi-chet-gan-dia-diem-dien-ra-dai-hoi-dch-tai-milwaukee.html
 
 [bptv.vn]
 match = -57.9%%
