--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-20 02:25:40
+lastsearch = 2024-07-20 09:03:48
 
 [www.linkedin.com]
-match = -172.7%%
-title = Tam Tran - Wichita, Kansas, United States
-url = https://www.linkedin.com/in/tam-tran-0a0005213
+match = -145.5%%
+title = Tam Tram - Kansas Army National Guard
+url = https://www.linkedin.com/in/tam-tram-a3286573
 
 [sos.ks.gov]
 match = -9.1%%
@@ -27,9 +27,9 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -90.9%%
-title = Khách Sạn Anh Minh Tam Đảo
-url = https://www.facebook.com/khachsan.anhminh.tamdao/
+match = -227.3%%
+title = Eat Healthier and more Economically - Salina
+url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
 
 [www.hoteljob.vn]
 match = -327.3%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -145.5%%
-title = 2024 Mt. Tam Trail Run | Mill Valley
-url = https://www.runguides.com/event/4688/mt-tam-trail-run
+match = -318.2%%
+title = San Francisco Bay Area Running Race Calendar - 24/25
+url = https://www.runguides.com/san-francisco/runs
 
 [www.kategridley.com]
 match = -125.0%%
