--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-20 06:14:58
+lastsearch = 2024-07-20 09:51:50
 
 [www.diepxuan.com]
-match = 7.1%%
-title = HT - Điệp Xuân
-url = https://www.diepxuan.com/ht.html
+match = -6.7%%
+title = Điệp Xuân Chiếu cây HT 160x200
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
 match = -6.7%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -146.7%%
-title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
+match = -106.7%%
+title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -180.0%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 - HT Max Light
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -233.3%%
-title = Tin Buổi Sáng - Ngày 14/07/2024 - HTV Tin Tức Mới Nhất ...
-url = https://www.youtube.com/watch?v=z-ABxLf4agM
+match = -260.0%%
+title = WoT || I Finally Completed HT-14 || And It Was Just Way Too ...
+url = https://www.youtube.com/watch?v=c7UL4QxJSt0
 
 [dauthau.asia]
 match = -240.0%%
