--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-20 05:32:35
+lastsearch = 2024-07-20 09:49:13
 
 [helloviettravel.com]
 match = -50.0%%
@@ -43,8 +43,8 @@ url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
 match = -218.8%%
-title = Khám phá Làng du lịch Mỹ Khánh (Cần Thơ) - Tập 3: Đại náo ...
-url = https://www.youtube.com/watch?v=esnw2jXy9g0
+title = Dự báo thời tiết du lịch 3 ngày tới từ ngày 18 đến ngày 20/07 ...
+url = https://www.youtube.com/watch?v=u-9zu0LucIo
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -290,4 +290,9 @@ url = https://vietluxtour.com/cam-nang-du-lich/du-lich-con-minh-mua-nao-dep.html
 match = -100.0%%
 title = Cảnh báo chiêu trò “sở hữu kỳ nghỉ du lịch”
 url = https://antv.gov.vn/video/an-ninh-voi-cuoc-song-19/canh-bao-chieu-tro-so-huu-ky-nghi-du-lich--FF2678C1F.html
+
+[vntravel.org.vn]
+match = -200.0%%
+title = Sắp diễn ra Hội chợ du lịch quốc tế TP.HCM lần thứ 18 với ...
+url = https://vntravel.org.vn/sap-dien-ra-hoi-cho-du-lich-quoc-te-tphcm-lan-thu-18-voi-chu-de-du-lich-ben-vung-kien-tao-tuong-lai-a5009.html
 
