--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-20 03:36:59
+lastsearch = 2024-07-20 11:23:49
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,8 +42,8 @@ title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -54.2%%
-title = Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt Freeship
+match = -45.8%%
+title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
 url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
