--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-20 09:07:13
+lastsearch = 2024-07-20 11:17:48
 
 [tiki.vn]
 match = -122.2%%
@@ -18,8 +18,8 @@ url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
 match = -188.9%%
-title = Everon ESM-21013 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esm21013.html
+title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -37,14 +37,14 @@ title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
 url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+match = -66.7%%
+title = Bộ ga chun Cotton chống thấm màu xám đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Melody M214 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-melody-m214
+match = -55.6%%
+title = Bộ ga phủ Common C96 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-common-c96
 
 [aeoneshop.com]
 match = -105.6%%
