--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-20 09:38:51
+lastsearch = 2024-07-20 11:25:06
 
 [www.everonvn.vn]
 match = 69.2%%
@@ -37,9 +37,9 @@ title = Nệm Everon Pocket - Go2Joy Mall
 url = https://go2joyvn.myharavan.com/products/nem-everon-pocket
 
 [everonthaiha.com]
-match = 31.2%%
-title = Đệm Lò Xo Everon
-url = https://everonthaiha.com/nhom-san-pham/248/dem-lo-xo-everon.html
+match = -100.0%%
+title = Đệm Lò Xo
+url = https://everonthaiha.com/nhom-san-pham/247/dem-lo-xo.html
 
 [everonhanquoc.vn]
 match = 24.0%%
