--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-20 02:44:22
+lastsearch = 2024-07-20 11:16:49
 
 [www.lazada.vn]
 match = -61.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -11.1%%
-title = NEM Fashion added a new photo.
-url = https://m.facebook.com/photo/?fbid=780012377494795&set=pcb.780016060827760
+match = -116.7%%
+title = NEM Fashion - NEM Fashion updated their cover photo.
+url = https://m.facebook.com/photo/?fbid=815333730629326&set=a.651941763635191
 
 [emartmall.com.vn]
 match = 0.0%%
